# Robotic_and_Computer_Vision_Projects_Matlab

./: README.md
Calibration_Kinect_v1/: CalibKinectv1.m
Calibration_Kinect_v2/: CalibKinectv2.m
Calibration_ZED_Camera/: CalibrationZED.m
Capture_Images_Kinect_v1_and_v2/: CaptureKinect_v1_v2.m
Compute_Essential_Fundamental_Matrix/: Compute_E_F_Matrix.m
Convert_Corners_Detection_Matlab_to_C++/: buildInfo.mat  dCP.m  dCP.prj  dCP_mex.mexa64  test_dCP.m
Convert_Function_Matlab_to_C++/Create_Function_Matlab/: demo.m  leer.m
Convert_Function_Matlab_to_C++/Test_Function_Linux/: CMakeLists.txt  main.cpp  manifest.json
Corners_Detection_Live_Camera_ZED/: ZED_FindCorners.m  chessboardEnergy.m  chessboardsFromCorners.m  cornerCorrelationScore.m  createCorrelationPatch.m  growChessboard.m  plotChessboards.m  refineCorners.m  subplottight.m
LIBCBDETECT_Corner_and_Checkerboard_Detection/Creation_Matlab/: chessboardsFromCorners.m  demo.m  extractuv.m  fce.m  fce.prj  fce_mex.mexw64  findCorners.m  (+6 more)
LIBCBDETECT_Corner_and_Checkerboard_Detection/Test_Linux/: CMakeLists.txt  main.cpp
LIBCBDETECT_Corner_and_Checkerboard_Detection/Test_Linux/fce/: CMakeLists.txt  fce.cpp  fce.h  fce_types.h  rtGetNaN.cpp  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
Point_Clouds_Similarity/: Similarity_Mahalanobis.m  final.ply  inicial.ply  intermedia.ply
Project_2D_points_to_3D/: Project_2D_points_to_3D.m
VO_Monocular_Libviso2_ZED/: matcherMex.mexa64  mexZED.mexa64  reconstructionMex.mexa64  visualOdometryMonoMex.mexa64  visualOdometryStereoMex.mexa64  vo_mono.m
(+856 files in other folders)
